# cnc-router-hack

./: .gitignore  README.md  router.sublime-project  router.sublime-workspace
arduino/: Buttons.cpp  Buttons.h  Display.cpp  Display.h  Motor.cpp  Motor.h  Router.cpp  main.ino  term.sh
arduino/display/: Display.cpp  ShiftRegister.cpp  ShiftRegister.h  main.ino
arduino_testing/: Makefile  Motor.cpp  Motor.h  Router.h  Vec.h  main.ino  motor.cpp  motor.h  print.h  router.cpp  router.h  vec.h
command_line/: CMakeLists.txt  command.cpp  command.h  document.cpp  document.h  interface.cpp  interface.h  main.cpp
cpp/: CMakeLists.txt  Canvas.cpp  Canvas.h  Window.cpp  Window.h  main.cpp
eagle/: 100x100_test.bot.etch.tap  100x100_test.brd  arduino.bot.etch.tap  buttons.brd  buttons.plt  display.brd  display.plt  motor_driver.brd  motor_driver.plt  pot_board.brd  pot_board.plt
